--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="src" path="build/def"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.jerkar.core"/>
+	<classpathentry kind="var" path="JERKAR_REPO/org.jerkar/core/jars/core-0.4.6.jar" sourcepath="JERKAR_REPO/org.jerkar/core/sources/core-0.4.6-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/djeang/.jerkar/cache/repo/org.jerkar/core/javadocs/core-0.4.6-javadoc.jar"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="var" path="JERKAR_HOME/org.jerkar.core-all.jar" sourcepath="JERKAR_HOME/libs-sources/org.jerkar.core-all-sources.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="src" path="build/def" output="build/output/def-bin"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
