--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="src" path="build/def"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.jerkar.core"/>
+	<classpathentry kind="src" path="jeka/def"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
