--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -28,5 +28,4 @@ jobs:
         OSSRH_PWD: ${{ secrets.OSSRH_PWD }}
         GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
       run: |
-        cd ./dev.jeka.plugins.protobuf
-        ./jekaw java#pack java#publish
+        ./jekaw cicd
